# urirun-connector-llm

./: CHANGELOG.md  Makefile  README.md  TODO.md  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
examples/: README.md  quickstart.sh
scripts/: ci_urirun_llm_smoke.py
tests/: test_contract.py  test_llm.py
urirun_connector_llm/: __init__.py  connector.manifest.json  contracts.json  core.py
